chore: Update contributing guidance